add tests so now piet is happy