@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 import javax.annotation.processing.Generated;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -23,14 +24,14 @@ public class CsvReaderTest {
     };
 
     @Test
-    public void testCsvReader() throws IOException{
+    public void testCsvReader() throws IOException {
         DataSet dataSet = CsvReader.readFile("data/scorer_training_dataset.csv", 0, 1, 1, 1, 1);
 
         assertEquals(502, dataSet.size);
         assertEquals(1, dataSet.inputSize);
         assertEquals(1, dataSet.outputSize);
-        assertArrayEquals(new String[] {"actual"}, dataSet.inputLabels);
-        assertArrayEquals(new String[] {"predicted"}, dataSet.outputLabels);
+        assertArrayEquals(new String[]{"actual"}, dataSet.inputLabels);
+        assertArrayEquals(new String[]{"predicted"}, dataSet.outputLabels);
         double[][] actualInputs = new double[502][1];
         double[][] actualOutputs = new double[502][1];
         assertEquals(actualInputs.length, dataSet.inputs.length);
@@ -38,16 +39,16 @@ public class CsvReaderTest {
     }
 
     @Test
-    public void testEmptyCsv(){
-            IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
-                DataSet dataSet = CsvReader.readFile("data/empty.csv", 0, 1, 1, 1);
-            });
-            assertEquals("Csv-File not allowed to be empty.", exception.getMessage());
+    public void testEmptyCsv() {
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
+            DataSet dataSet = CsvReader.readFile("data/empty.csv", 0, 1, 1, 1);
+        });
+        assertEquals("Csv-File not allowed to be empty.", exception.getMessage());
     }
 
     @Test
     void testComplexReadFileWithoutLabelParser() throws IOException {
-        DataSet result = CsvReader.readFile("data/scorer_training_dataset.csv", 1, lineParser, null);
+        DataSet result = CsvReader.readFile("data/scorer_training_dataset.csv", 1, lineParser);
 
         assertEquals(502, result.size);
         assertArrayEquals(null, result.inputLabels); //labelParser = null
@@ -64,6 +65,34 @@ public class CsvReaderTest {
 
         assertNotNull(result);
         assertEquals(1, capturedLabels.size());
-        assertEquals("actual,predicted", capturedLabels.getFirst());
+        assertEquals("actual,predicted", capturedLabels.get(0));
+    }
+
+    @Test
+    public void testCsvReaderConstructor() {
+        CsvReader csvReader = new CsvReader();
+        assertNotNull(csvReader);
+    }
+
+    @Test
+    void testParseDoubleOrNaNWithInvalidData() throws IOException {
+        DataSet dataSet = CsvReader.readFile("data/test_invalid.csv", 0, 1, 1, 1, 1);
+
+        assertEquals(4, dataSet.size);
+
+        boolean hasNaN = false;
+        for (double[] input : dataSet.inputs) {
+            if (Arrays.stream(input).allMatch(x -> Double.isNaN(x))){
+                hasNaN = true;
+                break;
+            }
+        }
+        for (double[] output : dataSet.outputs) {
+            if (Arrays.stream(output).allMatch(x -> Double.isNaN(x))) {
+                hasNaN = true;
+                break;
+            }
+        }
+        assertTrue(hasNaN);
     }
 }
